changed Today to Plan to achieve before next time

--- a/app/views/reports/_report_text.html.haml
+++ b/app/views/reports/_report_text.html.haml
@@ -5,7 +5,7 @@
   %ol#achievements
     - report.achievements.each do |achievement|
       %li= achievement.text
-  %h2= "Today I plan to achieve:"
+  %h2= "Plan to achieve before next meeting:"
   %ol#tasks
     - report.tasks.each do |task|
       %li= task.text
