wording revised to reflect sync up frequency

--- a/app/views/reports/_report_text.html.haml
+++ b/app/views/reports/_report_text.html.haml
@@ -5,7 +5,7 @@
   %ol#achievements
     - report.achievements.each do |achievement|
       %li= achievement.text
-  %h2= "Plan to achieve next meeting:"
+  %h2= "Plan to achieve next:"
   %ol#tasks
     - report.tasks.each do |task|
       %li= task.text
