--- a/app/views/reports/present.html.haml
+++ b/app/views/reports/present.html.haml
@@ -1,7 +1,7 @@
 = content_for :title do
   Meeting for #{@date}
 %section
-  %h1 Regularly meeting
+  %h1 Regular meeting
   %h2= @date.to_s :display
 - @reports.each do |report|
   %section.report
