--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,7 @@
 .jumbotron
   %h1
     %span.logo.animated.bounce Jelly
-    %small Let's get daily meetings down to minutes.
+    %small Let's get regular meetings down to minutes.
 .row
   - if current_user
     .col-md-6.col-xs-12
